[package]
name = "evemapping"
version = "0.1.0"
edition = "2021"
authors = ["Celeo <mattboulanger@fastmail.com>"]
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/evemapping"
repository = "https://github.com/celeo/evemapping"
license = "MIT OR Apache-2.0"
exclude = [".github"]
keywords = []
categories = []

[dependencies]
anyhow = "1.0.86"
crossterm = "0.27.0"
fern = "0.6.2"
humantime = "2.1.0"
log = "0.4.21"
once_cell = "1.19.0"
reqwest = "0.12.5"
rfesi = "0.42.0"
tokio = { version = "1.38.0", features = ["full"] }
tui = "0.19.0"
